tests/cmp/dc-label-wrong-bool-op.golden
Parse Error:
tests/cmp/dc-label-wrong-bool-op.trp:1:34: parse error
  1 | let val x = 90 raisedTo `<alice && bob; charlie>`
    |                                  ^
  unexpected '&'
  expected one of: identifier, '('

